# repo-intel

./: README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 20260420_0001_initial.py  20260420_0002_scan_artifacts.py  20260420_0003_routes_inventorying.py  20260420_0004_service_integrations.py
src/repo_intel/: __init__.py  main.py
src/repo_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/repo_intel/ai/: __init__.py  schemas.py  service.py  validators.py  vertex_client.py
src/repo_intel/ai/prompts/: __init__.py  ask.py  hotspot.py  summary.py
src/repo_intel/api/: deps.py  router.py
src/repo_intel/api/routes/: scans.py
src/repo_intel/core/: config.py  enums.py  logging.py
src/repo_intel/parsers/: __init__.py
src/repo_intel/parsers/typescript/: __init__.py  dependencies.py  imports.py  integrations.py  routes.py  symbols.py
src/repo_intel/schemas/: scan.py
src/repo_intel/services/: scan_service.py
src/repo_intel/storage/: __init__.py  db.py  models.py  repositories.py
src/repo_intel/worker/: context.py  orchestrator.py  workspace.py
src/repo_intel/worker/jobs/: __init__.py  run_scan.py
src/repo_intel/worker/phases/: __init__.py  clone.py  extract_dependencies.py  extract_findings.py  extract_git.py  extract_integrations.py  extract_routes.py  extract_structure.py  fingerprint.py  inventory.py
tests/: conftest.py  test_ai_reasoning.py  test_health.py  test_models.py  test_scans_api.py  test_services.py  test_typescript_parsers.py  test_worker_flow.py
